# maplebot

./: .env  .env.dev  .env.example  .gitignore  .pylintrc  MANIFEST.in  README.md  bot.py  pack.sh  pyproject.toml  requirements.txt  start.sh  start_dev.bat  start_dev.sh
.github/workflows/: pylint.yml
maplebot/: __init__.py
maplebot/commands/: arc_more_damage.py  bonus_att.py  bonus_bd.py  bonus_cd.py  bonus_idf.py  boss_party.py  calculator.py  cube.py  file_utils.py  find_role.py  find_role_online.py  gen_table.py  level_exp.py  potion.py  scrape.py  slide_puzzle.py  star_force.py
maplebot/plugins/: maplebot_main.py
maplebot/utils/: charts.py  class_name.py  config.py  db.py  dict_entry.py  dict_tfidf.py  format_utils.py  perm.py
